Fix tags when title is too long

--- a/resources/client/components/style.css
+++ b/resources/client/components/style.css
@@ -116,13 +116,10 @@
   background-color: #6d9e78d5;
 }
 
-
 .meal-type-label {
-  -fx-padding: 5px 10px;
   -fx-background-radius: 20;
-
-  padding: 5px 10px;
-  border-radius: 20;
+  -fx-padding: 5px 10px;
+  /* border-radius: 20; */
 }
 
 .bubble-label {
@@ -132,30 +129,9 @@
   -fx-border-width: 1.25;
   -fx-text-fill: #654321;
 
-  border-radius: 20px;
-  border-color: black;
-  border-width: 1px;
-}
-
-
-.meal-type-label[mealType="Breakfast"] {
-  -fx-background-color: #FAEDCB;
-  background-color: #FAEDCB;
-}
-
-.meal-type-label[mealType="Lunch"] {
-  -fx-background-color: #C9E4DE;
-  background-color: #C9E4DE;
-}
-
-.meal-type-label[mealType="Dinner"] {
-  -fx-background-color: #DBCDF0;
-  background-color: #DBCDF0;
-}
-
-.meal-type-label[mealType="Unknown"] {
-  -fx-background-color: #808080;
-  background-color: #808080;
+  /* border-radius: 20px; */
+  /* border-color: black; */
+  /* border-width: 1px; */
 }
 
 .recipe-box {
@@ -219,9 +195,9 @@
 
 .filter-combo-box .arrow-button {
   -fx-background-color: #e0e0e0;
-  -fx-shape: "M 0 0 L 3 6 L 6 0 Z"; 
-  -fx-scale-x: 0.7; 
-  -fx-scale-y: 0.7; 
+  -fx-shape: 'M 0 0 L 3 6 L 6 0 Z';
+  -fx-scale-x: 0.7;
+  -fx-scale-y: 0.7;
 }
 
 .filter-combo-box .arrow-button:hover {
@@ -257,7 +233,8 @@
   -fx-opacity: 0;
 }
 
-.filter-combo-box .arrow-button:hover, .filter-combo-box .list-view:hover {
+.filter-combo-box .arrow-button:hover,
+.filter-combo-box .list-view:hover {
   -fx-cursor: hand;
 }
 
